[project]
name = "viicrabs-feeder"
version = "0.1.0"
description = "A tool to post content to Xi Labs Reader"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "keyring>=25.6.0",
    "typer>=0.15.1",
]

[project.optional-dependencies]
kwallet = [
    "dbus-python>=1.3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
viicrabs = "viicrabs_feeder.__main__:app"
